--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -42,7 +42,7 @@
             android:stackFromBottom="true"/>
 
         <TextView
-            android:id="@+id/empty"
+            android:id="@+id/scanStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/scanning"/>
